--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -6,6 +6,6 @@ date: 2014-07-14
 img: cost.png
 thumbnail: cost-thumbnail.png
 alt: image-alt
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: Our cost structure is value-driven - Roadbook Recorder wishes to provide a better solution for roadbook generation, compared to what the competition is offering. Our costs are fixed per roadbook generation.
 
 ---
