--- a/_posts/2014-07-08-project-11.markdown
+++ b/_posts/2014-07-08-project-11.markdown
@@ -2,47 +2,25 @@
 title: User Interviews
 layout: default
 modal-id: 11
-img: baja500_conversation.png
-img1: baja_500_phone_call.jpeg
-img2: nsm_motorsport_conversation.png 
-img3: nsm_motorsport_phone_call.jpeg
+img: q1.png
+img1: q2.png
+img2: q3.png 
 date: 2014-07-08
 thumbnail: user-interviews-thumbnail.png
 description:
 
 ---
 
-<div style="text-align: justify"> We reached out to multiple rally organizers on Facebook. We asked them if we could schedule a meeting or a telephone call so we can ask a few questions about the way the organize competitions and generate roadbooks. </div>
+<div style="text-align: justify">
+    We reached out to a few groups of bikers and we asked them to fill in a form for us. With this form that we shared, we were loooking to find out about these people's experiences with roadbook navigation.
 
-<h3 style="text-align: left"> Our interviews </h3>
+    <br />
+    <br />
 
-<div style="text-align: left"> So far, we interviewed two rally organizers: </div>
+    First, we were interested in seeing how many of these motorsport enthusiasts have actually used a roadbook before. For those who gave a positive response, we asked about the context in which they used the roadbook - was it just for personal use or was it for an organized event? We also asked about the way these people got their roadbooks - did they personally generate them, or were they given to them? For those who said they never used a roadbook before, we wanted to know the reason why - was it lack of interest, or lack of knowledge / resources?
 
-<h4 style="text-align: left"> <a href="http://nsmmotorsport.ro/">NSM Motorsport</a> </h4>
+    <br />
+    <br />
 
-<div style="text-align: left"> From our conversation with NSM Motorsport, we found out the following information: </div>
-
-<div style="text-align: left"> 
-    <ul>
-        <li>They organize competitions based on roadbook navigation.</li>
-        <li>They generate roadbooks by hand.</li>
-        <li>From the available roadbook generation tools, they have tried Rally Navigator.</li>
-        <li>Still, they prefer to generate roadbooks by hand.</li>
-    </ul> 
+    Below there are some screenshots of the response statistics:
 </div>
-
-<h4 style="text-align: left"> <a href="https://www.facebook.com/romanianbaja/">Baja 500</a> </h4>
-
-<div style="text-align: left"> Baja 500 offered us the following information: </div>
-
-<div style="text-align: left"> 
-    <ul>
-        <li>Like NSM Motorsport, they also organize competitions based on roadbook navigation.</li>
-        <li>They generate roadbooks using Rally Navigator.</li>
-        <li>They record the track, they upload the recording to Rally Navigator, they generate the Roadbook and then they are making adjustments. </li>
-        <li>The adjustment part takes the most time, because they need to cover the route multiple times and update the roadbook to make sure it includes all the details.</li>
-        <li>Even if they use the Rally Navigator tool, the generation process is still very long - taking up to two weeks of hard work.</li>
-    </ul> 
-</div>
-
-<div style="text-align: left"> Below there are some screenshots of the Facebook and phone conversations: </div>
